--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -2,6 +2,7 @@
   <a class="navbar-brand" href="#">
     <img src="/img/logo/5-white.png" alt="hidden-lg-down" width="50" class="hidden-lg-down">
     <img src="/img/logo/5-white.png" alt="hidden-sm-up" width="25" class="hidden-sm-up">
+    <img src="/img/logo/5-white.png" alt="hidden" width="25" class="hidden-lg-up hidden-sm-down">
 
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
