--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14730,3 +14730,19 @@
     line-height: 1.2;
   }
 }
+
+/*  */
+.parallax {
+  /* The image used */
+  background-image: url('/img/header/masthead.png');
+
+  /* Full height */
+  height: 50%; 
+  width: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
