--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,9 +3,9 @@
 <img src="/img/header/masthead.png" alt="" class="w-100 card-img" />
 <div class="card-img-overlay text-center font-weight-bold text-white">
   <!-- Desktops -->
-  <div class="hidden-md-down" style="height:20%;"></div>
+  <div class="hidden-md-down" style="height:18%;"></div>
   <h1 class="display-1 font-weight-bold hidden-md-down">
-    This is the a to build a brand.
+    This is the place to build a brand.
   </h1>
   <a
     href=""
@@ -14,13 +14,13 @@
   >
 
   <!-- Tablet -->
-  <div class="hidden-lg-up hidden-sm-down" style="height: 10%;"></div>
-  <h1 class="display-4 font-weight-bold hidden-lg-up hidden-sm-down">
+  <div class="hidden-unless-md" style="height: 10%;"></div>
+  <h1 class="display-4 font-weight-bold hidden-unless-md">
     This is the place to build a brand.
   </h1>
   <a
     href=""
-    class="btn btn-lg btn-white rounded-pill font-weight-bold px-5 py-3 hidden-lg-up hidden-sm-down"
+    class="btn btn-lg btn-white rounded-pill font-weight-bold px-5 py-3 hidden-unless-md"
     >Get Started</a
   >
 
@@ -38,12 +38,12 @@
 
 <div class="container py-5">
   <div class="row py-5">
-    <div class="col-lg-6 col-md-6 col-sm-12">
+    <div class="col-lg-6 col-md-12 col-sm-12">
       <h1 class="font-weight-bold">
         The Freedom to Create the Websites You Want
       </h1>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
+    <div class="col-lg-6 col-md-12 col-sm-12">
       <p class="">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ultricies mi quis
@@ -57,7 +57,7 @@
 {{ partial "customers" . }}
 
 <div class="row py-5">
-  <div class="col-lg-6 col-md-6 col-sm-12 p-5">
+  <div class="col-lg-6 col-md-12 col-sm-12 p-5">
     <h1 class="font-weight-bold">How we work</h1>
     <h5 class="pb-4">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -70,7 +70,7 @@
       >Learn More</a
     >
   </div>
-  <div class="col-lg-6 col-md-6 col-sm-12">
+  <div class="col-lg-6 col-md-12 col-sm-12">
     <img src="/img/header/masthead.png" alt="" class="w-100" />
   </div>
 </div>
@@ -78,17 +78,17 @@
 <div class="parallax text-center py-5">
   <h1 class="display-1 font-weight-bold text-white py-5">
     Creative. Unique. <br />
-    Simple
+    Simple.
   </h1>
 </div>
 
 {{ partial "features" . }}
 
 <div class="row bg-light">
-  <div class="col-lg-6 col-md-6 col-sm-12">
+  <div class="col-lg-6 col-md-12 col-sm-12">
     <img src="/img/header/masthead.png" alt="" class="w-100" />
   </div>
-  <div class="col-lg-6 col-md-6 col-sm-12 p-5">
+  <div class="col-lg-6 col-md-12 col-sm-12 p-5">
     <h1 class="font-weight-bold">Manage and Grow Your Business Online</h1>
     <h6 class="">
       The Wix website builder makes it possible for anyone to create a website
@@ -101,26 +101,28 @@
   </div>
 </div>
 
-<div class="row bg-omega text-white py-5">
-  <div class="col-lg-6 col-md-12 p-5">
-    <h1 class="font-weight-bold">
-      Why the Wix Website Builder Is the Best Choice for You
-    </h1>
-  </div>
-  <div class="col-lg-6 col-md-12 p-5">
-    <h6 class="">
-      You can create a free and professional website all on your own. With Wix,
-      you can start with a stunning template and customize it, or get a
-      personalized website made just for you. When you choose Wix, you don’t
-      just get a drag and drop website builder. You get the whole package. Free
-      reliable web hosting, top security, the best SEO and a dedicated support
-      team to help you along the way. Over 150 million people worldwide choose
-      Wix to create a free website. And you can do it, too.
-    </h6>
+<div class="container-fluid">
+  <div class="row bg-omega text-white py-5">
+    <div class="col-lg-6 col-md-12 col-12 p-5">
+      <h1 class="font-weight-bold">
+        Why the Wix Website Builder Is the Best Choice for You
+      </h1>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12 p-5">
+      <h6 class="">
+        You can create a free and professional website all on your own. With
+        Wix, you can start with a stunning template and customize it, or get a
+        personalized website made just for you. When you choose Wix, you don’t
+        just get a drag and drop website builder. You get the whole package.
+        Free reliable web hosting, top security, the best SEO and a dedicated
+        support team to help you along the way. Over 150 million people
+        worldwide choose Wix to create a free website. And you can do it, too.
+      </h6>
 
-    <a href="" class="text-white"
-      ><h6 class="font-weight-bold py-3"><u>Get Started</u></h6></a
-    >
+      <a href="" class="text-white"
+        ><h6 class="font-weight-bold py-3"><u>Get Started</u></h6></a
+      >
+    </div>
   </div>
 </div>
 
