--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -11,13 +11,15 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
+      <a class="nav-item nav-link text-light px-3" href="/">Home</a>
+      <a class="nav-item nav-link text-light px-3" href="/work/">Work</a>
+      <a class="nav-item nav-link text-light px-3" href="#">Services</a>
+      <a class="nav-item nav-link text-light px-3" href="#">Careers</a>
+      <a class="nav-item nav-link text-light px-3" href="#">Contact</a>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <a href="" class="text-decoration-none text-light px-3">Login</a>
+      <a href="" class="btn btn-outline-light">Sign Up</a>
     </form>
   </div>
 </nav>
