--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14746,3 +14746,8 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media only screen and (max-width: 800px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
