--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,25 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-omega fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark text-montserrat bg-omega">
   <a class="navbar-brand" href="#">
-    <img src="/img/logo/5-white.png" alt="hidden-lg-down" width="50" class="hidden-lg-down">
-    <img src="/img/logo/5-white.png" alt="hidden-sm-up" width="25" class="hidden-sm-up">
-    <img src="/img/logo/5-white.png" alt="hidden" width="25" class="hidden-lg-up hidden-sm-down">
-
+    <img src="/img/logo/5-white.png" height="30px" alt="" class="">
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <a class="nav-item nav-link text-light px-3" href="/">Home</a>
-      <a class="nav-item nav-link text-light px-3" href="/work/">Work</a>
-      <a class="nav-item nav-link text-light px-3" href="#">Services</a>
-      <a class="nav-item nav-link text-light px-3" href="#">Careers</a>
-      <a class="nav-item nav-link text-light px-3" href="#">Contact</a>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <a href="" class="text-decoration-none text-light px-3">Login</a>
-      <a href="" class="btn btn-outline-light">Sign Up</a>
-    </form>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="#">Home</a>
+      <a class="nav-item nav-link" href="#">About</a>
+    </div>
   </div>
 </nav>
