--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,14 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-dark text-montserrat bg-omega">
-  <a class="navbar-brand" href="#">
-    <img src="/img/logo/5-white.png" height="30px" alt="" class="">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="https://diesmo5.com">diesmo5</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">About</a>
+      <a class="nav-item nav-link" href="https://sudocore.diesmo5.com"
+        >Sudocore</a
+      >
+      <a class="nav-item nav-link" href="https://edux.diesmo5.com">EduX</a>
+      <a class="nav-item nav-link" href="https://masterclass.diesmo5.com"
+        >MasterClass</a
+      >
+      <a class="nav-item nav-link" href="https://diesmo5.com/events">Events</a>
+      <a class="nav-item nav-link" href="/newsletter">Newsletter</a>
     </div>
   </div>
 </nav>
