--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="/img/logo/5-white.png" type="image/x-icon">
-    <title>DIESMO 5</title>
+    <link
+      rel="shortcut icon"
+      href="/img/logo/5-white.png"
+      type="image/x-icon"
+    />
+    <title>diesmo5</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
@@ -16,9 +21,11 @@
     />
   </head>
   <body class="text-century">
-    {{ partial "navbar" . }}
-    {{ block "main" . }}
-    {{ end }}
+    <div class="container">
+      {{ partial "navbar" . }}
+      {{ block "main" . }}
+      {{ end }}
+    </div>
     {{ partial "footer" . }}
 
     <script
