--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,206 @@
 {{ define "main" }}
+<!--  -->
+<div class="row">
+  <div
+    id="carouselExampleIndicators"
+    class="carousel slide"
+    data-ride="carousel"
+  >
+    <ol class="carousel-indicators">
+      <li
+        data-target="#carouselExampleIndicators"
+        data-slide-to="0"
+        class="active"
+      ></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          src="/img/winter-course-promo.png"
+          class="d-block w-100"
+          alt="Holiday Course Promo"
+        />
+      </div>
+      <!-- <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="..." />
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="..." />
+      </div> -->
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleIndicators"
+      role="button"
+      data-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleIndicators"
+      role="button"
+      data-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<!--  -->
 
+<!--  -->
+<div class="row py-4">
+  <div class="card-deck">
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">MasterClass</h5>
+        <p class="card-text">
+          Get hundreds of hours content for $12.
+        </p>
+        <a href="" class="">Start a Course ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Sudocore</h5>
+        <p class="card-text">
+          Build your next website faster than ever.
+        </p>
+        <a href="" class="">Get Started ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">EduFriend</h5>
+        <p class="card-text">
+          Make managing your academically life mindless.
+        </p>
+        <a href="" class="">Get Started ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Keep up with diesmo5</h5>
+        <p class="card-text">
+          Take part in our journey.
+        </p>
+        <a href="" class="">Join the diesmo5 Community ></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--  -->
 
+<!--  -->
+<div class="row">
+  <div class="jumbotron jumbotron-fluid bg-dark px-4">
+    <div class="container">
+      <h1 class="text-white display-4">diesmo5 on YouTube</h1>
+      <p class="text-white lead">
+        Watch endless tech, programming, and engineering videos
+      </p>
+      <a href="" class="btn btn-lg btn-light">WATCH NOW</a>
+    </div>
+  </div>
+</div>
+<!--  -->
+
+<!--  -->
+<div class="row">
+  <h4 class="font-weight-bold"></h4>
+  <div class="card-deck">
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Keep up with diesmo5</h5>
+        <p class="card-text">
+          Take part in our journey.
+        </p>
+        <a href="" class="">Join the diesmo5 Community ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Keep up with diesmo5</h5>
+        <p class="card-text">
+          Take part in our journey.
+        </p>
+        <a href="" class="">Join the diesmo5 Community ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Keep up with diesmo5</h5>
+        <p class="card-text">
+          Take part in our journey.
+        </p>
+        <a href="" class="">Join the diesmo5 Community ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Keep up with diesmo5</h5>
+        <p class="card-text">
+          Take part in our journey.
+        </p>
+        <a href="" class="">Join the diesmo5 Community ></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+<!--  -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li
+      data-target="#carouselExampleIndicators"
+      data-slide-to="0"
+      class="active"
+    ></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="..." />
+    </div>
+  </div>
+  <a
+    class="carousel-control-prev"
+    href="#carouselExampleIndicators"
+    role="button"
+    data-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#carouselExampleIndicators"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!--  -->
 {{ end }}
