--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <!--  -->
-<div class="row">
+<div class="row pb-3">
   <div
     id="carouselExampleIndicators"
     class="carousel slide"
@@ -17,18 +17,32 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img
-          src="/img/winter-course-promo.png"
-          class="d-block w-100"
-          alt="Holiday Course Promo"
-        />
-      </div>
-      <!-- <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="..." />
+        <a href="" class="text-decoration-none">
+          <img
+            src="/img/c-how-to-program-course-promo.png"
+            class="d-block w-100"
+            alt="C How To Program Course Promo"
+          />
+        </a>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="..." />
-      </div> -->
+        <a href="" class="text-decoration-none">
+          <img
+            src="/img/youtube-promo.png"
+            class="d-block w-100"
+            alt="SudoCore Web Framework Promo"
+          />
+        </a>
+      </div>
+      <div class="carousel-item">
+        <a href="" class="text-decoration-none">
+          <img
+            src="/img/sudocore-promo.png"
+            class="d-block w-100"
+            alt="SudoCore Web Framework Promo"
+          />
+        </a>
+      </div>
     </div>
     <a
       class="carousel-control-prev"
@@ -53,46 +67,88 @@
 <!--  -->
 
 <!--  -->
-<div class="row py-4">
+<div class="row py-5">
   <div class="card-deck">
     <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
+      <a href="https://masterclass.diesmo5.com" class="">
+        <img
+          src="/img/masterclass-square-promo.png"
+          class="card-img-top"
+          alt="..."
+        />
+      </a>
       <div class="card-body">
-        <h5 class="card-title">MasterClass</h5>
-        <p class="card-text">
-          Get hundreds of hours content for $12.
-        </p>
-        <a href="" class="">Start a Course ></a>
+        <a
+          href="https://masterclass.diesmo5.com"
+          class="text-decoration-none text-dark"
+        >
+          <h5 class="card-title">MasterClass</h5>
+          <p class="card-text">
+            Get hundreds of hours content for $12.
+          </p>
+        </a>
+        <a href="https://masterclass.diesmo5.com" class="">Start a Course ></a>
       </div>
     </div>
     <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
+      <a href="https://masterclass.diesmo5.com" class="">
+        <img
+          src="/img/sudocore-square-promo.png"
+          class="card-img-top"
+          alt="..."
+        />
+      </a>
       <div class="card-body">
-        <h5 class="card-title">Sudocore</h5>
-        <p class="card-text">
-          Build your next website faster than ever.
-        </p>
-        <a href="" class="">Get Started ></a>
+        <a
+          href="https://masterclass.diesmo5.com"
+          class="text-decoration-none text-dark"
+        >
+          <h5 class="card-title">Sudocore</h5>
+          <p class="card-text">
+            Build your next website faster than ever.
+          </p>
+        </a>
+        <a href="https://masterclass.diesmo5.com" class="">Get Started ></a>
       </div>
     </div>
     <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
+      <a href="https://masterclass.diesmo5.com" class="">
+        <img src="/img/edux-square-promo.png" class="card-img-top" alt="..." />
+      </a>
       <div class="card-body">
-        <h5 class="card-title">EduFriend</h5>
-        <p class="card-text">
-          Make managing your academically life mindless.
-        </p>
-        <a href="" class="">Get Started ></a>
+        <a
+          href="https://masterclass.diesmo5.com"
+          class="text-decoration-none text-dark"
+        >
+          <h5 class="card-title">EduFriend</h5>
+          <p class="card-text">
+            Simple way to manage your student life.
+          </p>
+        </a>
+        <a href="https://masterclass.diesmo5.com" class="">App Store ></a>
       </div>
     </div>
     <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
+      <a href="https://masterclass.diesmo5.com" class="">
+        <img
+          src="/img/newsletter-square-promo.png"
+          class="card-img-top"
+          alt="..."
+        />
+      </a>
       <div class="card-body">
-        <h5 class="card-title">Keep up with diesmo5</h5>
-        <p class="card-text">
-          Take part in our journey.
-        </p>
-        <a href="" class="">Join the diesmo5 Community ></a>
+        <a
+          href="https://masterclass.diesmo5.com"
+          class="text-decoration-none text-dark"
+        >
+          <h5 class="card-title">Keep up with diesmo5</h5>
+          <p class="card-text">
+            Take part in our journey.
+          </p>
+        </a>
+        <a href="https://masterclass.diesmo5.com" class=""
+          >Join the Community ></a
+        >
       </div>
     </div>
   </div>
@@ -100,16 +156,10 @@
 <!--  -->
 
 <!--  -->
-<div class="row">
-  <div class="jumbotron jumbotron-fluid bg-dark px-4">
-    <div class="container">
-      <h1 class="text-white display-4">diesmo5 on YouTube</h1>
-      <p class="text-white lead">
-        Watch endless tech, programming, and engineering videos
-      </p>
-      <a href="" class="btn btn-lg btn-light">WATCH NOW</a>
-    </div>
-  </div>
+<div class="row bg-dark p-2">
+  <a href="" class="text-decoration-none">
+    <img src="/img/youtube-promo2.png" alt="" class="w-100" />
+  </a>
 </div>
 <!--  -->
 
@@ -118,43 +168,47 @@
   <h4 class="font-weight-bold"></h4>
   <div class="card-deck">
     <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
+      <img
+        src="/img/hackathon-square-promo.png"
+        class="card-img-top"
+        alt="..."
+      />
       <div class="card-body">
-        <h5 class="card-title">Keep up with diesmo5</h5>
+        <h5 class="card-title">Hackathons</h5>
         <p class="card-text">
           Take part in our journey.
         </p>
-        <a href="" class="">Join the diesmo5 Community ></a>
+        <a href="" class="">Learn More ></a>
+      </div>
+    </div>
+    <div class="card border-0">
+      <img src="/img/events-square-promo.png" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Events</h5>
+        <p class="card-text">
+          Take part in our journey.
+        </p>
+        <a href="" class="">Learn More ></a>
       </div>
     </div>
     <div class="card border-0">
       <img src="..." class="card-img-top" alt="..." />
       <div class="card-body">
-        <h5 class="card-title">Keep up with diesmo5</h5>
+        <h5 class="card-title">Education</h5>
         <p class="card-text">
           Take part in our journey.
         </p>
-        <a href="" class="">Join the diesmo5 Community ></a>
+        <a href="" class="">Learn More ></a>
       </div>
     </div>
     <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
+      <img src="/img/youtube-square-promo.png" class="card-img-top" alt="..." />
       <div class="card-body">
-        <h5 class="card-title">Keep up with diesmo5</h5>
+        <h5 class="card-title">YouTube</h5>
         <p class="card-text">
           Take part in our journey.
         </p>
-        <a href="" class="">Join the diesmo5 Community ></a>
-      </div>
-    </div>
-    <div class="card border-0">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Keep up with diesmo5</h5>
-        <p class="card-text">
-          Take part in our journey.
-        </p>
-        <a href="" class="">Join the diesmo5 Community ></a>
+        <a href="" class="">Learn More ></a>
       </div>
     </div>
   </div>
