--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="https://diesmo5.com">diesmo5</a>
+  <a class="navbar-brand" href="https://diesmo5.com">
+    <img src="/img/logo/diesmo5-logo.png" width="110px" alt="">
+  </a>
   <button
     class="navbar-toggler"
     type="button"
