--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,8 @@
 {{ define "main" }}
 
-<h1>hello</h1>
+<div class="container">
+    <h1 class="text-center">
+        404: Page Not Found
+    </h1>
+</div>
 {{ end }}
