--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="https://diesmo5.com">
+  <a class="navbar-brand" href="/">
     <img src="/img/logo/diesmo5-logo.png" width="110px" alt="">
   </a>
   <button
@@ -22,7 +22,7 @@
       <a class="nav-item nav-link" href="https://masterclass.diesmo5.com"
         >MasterClass</a
       >
-      <a class="nav-item nav-link" href="https://diesmo5.com/events">Events</a>
+      <a class="nav-item nav-link" href="/events">Events</a>
       <a class="nav-item nav-link" href="/newsletter">Newsletter</a>
     </div>
   </div>
