--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
   {{ end }}
     <title>diesmo5</title>
 
-    <link rel="stylesheet" href="/sudocore/sudocore.css" />
+    <link rel="stylesheet" href="../sudocore/sudocore.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
