--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="/img/logo/icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../img/logo/icon.png" type="image/x-icon" />
     <title> {{ if .Title }} {{ .Title }} | {{ end }} diesmo5</title>
     {{ if .Description }}
     <meta name="description" content="{{ .Description }}">
