--- a/layouts/index.html
+++ b/layouts/index.html
@@ -89,7 +89,7 @@
               Get hundreds of hours content for $12.
             </p>
           </a>
-          <a href="https://masterclass.diesmo5.com" class=""
+          <a href="https://masterclass.diesmo5.com" class="text-small"
             >Start a Course ></a
           >
         </div>
@@ -112,7 +112,7 @@
               Build your next website faster than ever.
             </p>
           </a>
-          <a href="https://masterclass.diesmo5.com" class="">Get Started ></a>
+          <a href="https://masterclass.diesmo5.com" class="text-small">Get Started ></a>
         </div>
       </div>
       <div class="card border-0">
@@ -133,7 +133,7 @@
               Simple way to manage your student life.
             </p>
           </a>
-          <a href="https://masterclass.diesmo5.com" class="">App Store ></a>
+          <a href="https://masterclass.diesmo5.com" class="text-small">App Store ></a>
         </div>
       </div>
       <div class="card border-0">
@@ -154,7 +154,7 @@
               Take part in our journey.
             </p>
           </a>
-          <a href="https://masterclass.diesmo5.com" class=""
+          <a href="https://masterclass.diesmo5.com" class="text-small"
             >Join the Community ></a
           >
         </div>
@@ -186,7 +186,7 @@
           <p class="card-text">
             Take part in our journey.
           </p>
-          <a href="" class="">Learn More ></a>
+          <a href="" class="text-small">Learn More ></a>
         </div>
       </div>
       <div class="card border-0">
@@ -200,7 +200,7 @@
           <p class="card-text">
             Take part in our journey.
           </p>
-          <a href="" class="">Learn More ></a>
+          <a href="" class="text-small">Learn More ></a>
         </div>
       </div>
       <div class="card border-0">
@@ -210,7 +210,7 @@
           <p class="card-text">
             Take part in our journey.
           </p>
-          <a href="" class="">Learn More ></a>
+          <a href="" class="text-small">Learn More ></a>
         </div>
       </div>
       <div class="card border-0">
@@ -224,7 +224,7 @@
           <p class="card-text">
             Take part in our journey.
           </p>
-          <a href="" class="">Learn More ></a>
+          <a href="" class="text-small">Learn More ></a>
         </div>
       </div>
     </div>
