--- a/layouts/memberships/section.html
+++ b/layouts/memberships/section.html
@@ -2,10 +2,153 @@
 {{ partial "navbar" . }}
 
 <div class="container-fluid" id="membershipsheader">
-  <div class="container text-white">
-    <h5 class="font-weight-normal">Join Us -</h5>
-    <h1 class="font-weight-bold">Join Our Family</h1>
+  <div class="container text-white text-center">
+    <h1 class="font-weight-bold">The diesmo5 Pro Group</h1>
+    <h3 class="font-weight-normal py-3">
+      Get weekly face time with diesmo5 and join an exclusive community of
+      creative entrepreneurs.
+    </h3>
+    <a
+      href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
+      class="btn btn-lg btn-primary px-5"
+      >Get Started</a
+    >
   </div>
+</div>
+
+<div class="container py-5">
+  <h1 class="font-weight-bold">
+    Share, learn and grow together.
+  </h1>
+  <h4 class="font-weight-normal py-4">
+    Looking for your people? We know where to find them.
+  </h4>
+  <h5 class="font-weight-light py-4">
+    The Futur Pro group is an exclusive and thriving community of creative
+    entrepreneurs sharing their daily challenges and finding real solutions from
+    their peers and from us.
+    <br /><br />
+    With over 200 members, by joining this tight-knit group, you will
+    immediately expand your network of people to learn from and collaborate
+    with. Agency owners, designers, marketers, writers, developers and so on.
+    And from all corners of the world.
+  </h5>
+</div>
+
+<div class="container py-5">
+  <h2 class="font-ewight-bold">Weekly face time with The Futur.</h2>
+  <h5 class="font-weight-light">
+    As a member of The Futur Pro Group, you’ll get access to our weekly video
+    calls where you can ask any of us (including Chris Do) questions, and get
+    them answered right then and there.
+    <br /><br />
+    Better yet, you will also gain entry to a library of over 120 hours of
+    previous Pro Group video calls covering topics like strategy, pricing,
+    sales, marketing, project management and a whole lot more.
+    <br /><br />
+    These calls and recordings are exclusive to The Futur Pro Group—you won’t
+    get them anywhere else.
+  </h5>
+</div>
+
+<div class="container-fluid bg-dark text-white py-5">
+  <div class="container">
+    <h1 class="font-weight-bold py-5">What you get:</h1>
+    {{ range.Pages }}
+    <a href="#" class="text-decoration-none text-light">
+      <h4 class="font-weight-bold">{{ .Title }}</h4>
+      <h5 class="font-weight-normal">
+        {{ .Params.Description }}
+      </h5>
+      <div class="py-3"></div>
+    </a>
+    {{ end }}
+  </div>
+</div>
+
+<div class="container py-5">
+  <div class="text-center py-5">
+    <h1 class="font-weight-bold pb-4">
+      Why do people join The Futur Pro Group?
+    </h1>
+    <a
+      href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
+      class="btn btn-lg btn-primary px-5"
+      >Get Started</a
+    >
+  </div>
+  <div class="py-2">
+    <div class="row py-3">
+      <div class="col-lg-3 col-md-3 col-12 my-auto pr-5">
+        <h5 class="font-weight-bold">To stay connected</h5>
+      </div>
+      <div class="col-lg-9 col-md-9 col-12 my-auto">
+        <h5 class="font-weight-normal">
+          Entrepreneurship can be a lonely endeavor, but it doesn’t have to be.
+          In this group, you’ll find people at all levels. All the way from
+          college students to agency owners. And like we said, from all over the
+          world.
+        </h5>
+      </div>
+      <div class="py-1 bg-light"></div>
+    </div>
+    <div class="row py-3">
+      <div class="col-lg-3 col-md-3 col-12 my-auto pr-5">
+        <h5 class="font-weight-bold">For accountability</h5>
+      </div>
+      <div class="col-lg-9 col-md-9 col-12 my-auto">
+        <h5 class="font-weight-normal">
+          Holding yourself accountable can be tricky when you’re the boss. It’s
+          a lot easier when you have over 200 people ready to hold your feet to
+          the fire.
+        </h5>
+      </div>
+      <div class="py-1 bg-light"></div>
+    </div>
+    <div class="row py-3">
+      <div class="col-lg-3 col-md-3 col-12 my-auto pr-5">
+        <h5 class="font-weight-bold">To find a better way</h5>
+      </div>
+      <div class="col-lg-9 col-md-9 col-12 my-auto">
+        <h5 class="font-weight-normal">
+          Trial and error are good, if you have the time and the patience. But
+          there’s no need to reinvent the wheel. Find strength in numbers by
+          using this community to help you smash your big goals.
+        </h5>
+      </div>
+      <div class="py-1 bg-light"></div>
+    </div>
+  </div>
+</div>
+
+<div class="container text-center py-5">
+  <h5 class="font-weight-bold pb-4">
+    Join over 1,000 other students and get started now!
+  </h5>
+  <a
+    href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
+    class="text-decoration-none"
+  >
+    <div class="card text-left p-4">
+      <h5 class="font-weight-bold">Monthly</h5>
+      <h6 class="font-weight-light">$15</h6>
+    </div>
+  </a>
+  <a
+    href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
+    class="text-decoration-none"
+  >
+    <div class="card text-left p-4">
+      <h5 class="font-weight-bold">Annual</h5>
+      <h6 class="font-weight-light">$100</h6>
+    </div>
+  </a>
+  <div class="py-3"></div>
+  <a
+    href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
+    class="btn btn-lg btn-primary px-5"
+    >Get Started</a
+  >
 </div>
 
 {{ end }}
