--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/">
-    <img src="/img/logo/diesmo5-logo.png" width="110px" alt="" />
+    <img src="/img/logo/diesmo5-logo.png" width="110px" alt="diesmo5-logo" />
   </a>
   <button
     class="navbar-toggler border-0"
