--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,7 +28,7 @@
       {{ block "main" . }}
       {{ end }}
     </div>
-    {{ partial "footer" . }}
+    <!-- {{ partial "footer" . }} -->
     {{ partial "scriptcode" . }}
   </body>
 </html>
