--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -51,10 +51,10 @@
         </div>
       </div>
       <div class="box p-3 col-lg-2 col-md-4 col-12">
-        <h6 class="">Developer</h6>
+        <h6 class="">Media</h6>
         <div class="box-body">
           <ul class="list-unstyled">
-            {{range $.Site.Data.footer.developer}}
+            {{range $.Site.Data.footer.media}}
             <li class="list-unstyled">
               <a href="{{.url}}" class="text-small text-dark">{{.title}}</a>
             </li>
