--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     <img src="/img/logo/icon.png" class="w-50" alt="" />
     <h1 class="">diesmo<i>5</i></h1>
   </div>
-  <h1 class="text-center">Our Website is being Rennovated</h1>
+  <!-- <h1 class="text-center">Our Website is being Rennovated</h1> -->
 
   {{ range $.Site.Data.temp }}
   <div class="text-center py-5">
