--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <!-- {{ partial "navbar" . }} -->
 
-<div class="container">
+<div class="container py-5">
   <div class="text-center py-5">
     <img src="/img/logo/icon.png" class="w-50" alt="" />
     <h1 class="">diesmo<i>5</i></h1>
