--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,13 +9,14 @@
       href="../../img/logo/icon.png"
       type="image/x-icon"
     />
-    <title>{{ if .Title }} {{ .Title }} | {{ end }} diesmo5</title>
+    <title>{{ if .Title }} {{ .Title }} | {{ end }} DIESMO 5</title>
     {{ if .Description }}
     <meta name="description" content="{{ .Description }}" />
     {{ end }}
     <title>diesmo5</title>
 
     <link rel="stylesheet" href="../../sudocore/sudocore.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -28,7 +29,7 @@
       {{ block "main" . }}
       {{ end }}
     </div>
-    <!-- {{ partial "footer" . }} -->
+    {{ partial "footer" . }}
     {{ partial "scriptcode" . }}
   </body>
 </html>
