--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
 <!-- {{ partial "navbar" . }} -->
 
-<div class="container py-5">
+<!-- <div class="container py-5">
   <div class="text-center py-5">
     <img src="/img/logo/icon.png" class="w-50" alt="" />
     <h1 class="">diesmo<i>5</i></h1>
-  </div>
+  </div> -->
   <!-- <h1 class="text-center">Our Website is being Rennovated</h1> -->
-
+<!-- 
   {{ range $.Site.Data.temp }}
   <div class="text-center py-5">
     <h3 class="font-weight-bold">{{.title}}</h3>
@@ -19,7 +19,7 @@
     </p>
   </div>
   {{ end }}
-</div>
+</div> -->
 
 <!-- <div class="container">
   <div class="row pb-3">
