--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,10 +27,10 @@
         </div>
       </div>
       <div class="box p-3 col-lg-2 col-md-4 col-12">
-        <h6 class="">Education</h6>
+        <h6 class="">Work</h6>
         <div class="box-body">
           <ul class="list-unstyled">
-            {{range $.Site.Data.footer.education}}
+            {{range $.Site.Data.footer.work}}
             <li class="list-unstyled">
               <a href="{{.url}}" class="text-small text-dark">{{.title}}</a>
             </li>
@@ -39,10 +39,10 @@
         </div>
       </div>
       <div class="box p-3 col-lg-2 col-md-4 col-12">
-        <h6 class="">Foundation</h6>
+        <h6 class="">Collaborate</h6>
         <div class="box-body">
           <ul class="list-unstyled">
-            {{range $.Site.Data.footer.foundation}}
+            {{range $.Site.Data.footer.collaborate}}
             <li class="list-unstyled">
               <a href="{{.url}}" class="text-small text-dark">{{.title}}</a>
             </li>
