--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,7 +25,7 @@
     />
   </head>
   <body class="text-century">
-    <div class="">
+    <div class="text-yankees">
       {{ block "main" . }}
       {{ end }}
     </div>
