--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<!-- {{ partial "navbar" . }} -->
+{{ partial "navbar" . }}
 
 <!-- <div class="container py-5">
   <div class="text-center py-5">
