--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -6,13 +6,9 @@
   </h3>
   <p class="">{{.Content}}</p>
 
-  <div class="text-center py-5">
-    Video
-  </div>
-
   <div class="row">
     {{range $.Site.Data.services}}
-    <div class="card border-0 col-lg-3 col-md-4 col-12">
+    <div class="card border-0 col-lg-4 col-md-4 col-12">
       <img src="{{.img}}" alt="{{.alt}}" class="card-img" />
       <div class="card-body text-center">
         <p class="card-title font-weight-bold text-dark text-center ">
@@ -20,19 +16,19 @@
         </p>
         <p class="card-title">{{.description}}</p>
         <a
-          target="_top"
-          class="btn btn-yankees rounded-0 justify-content-center"
+          class="btn btn-yankees rounded-0"
           href="https://square.site/book/Z2N4T0WQDXAG7/diesmo5-camarillo-ca"
+          target="_blank"
           rel="nofollow"
           >Book an Appointment</a
         >
       </div>
     </div>
     {{ end }}
-    <h6 class="font-weight-light text-rose text-small">
-      *First Consultations are Free
-    </h6>
   </div>
+  <h6 class="font-weight-light text-rose text-small">
+    *First Consultations are Free
+  </h6>
   <div class="text-center">
     <a href="/work/" class="font-weight-light text-yankees text-small"
       >View Work</a
@@ -41,15 +37,14 @@
 </div>
 
 <div class="container-fluid text-center py-5">
-    <div class="container py-5">
-      <h5 class="font-weight-light">Ready to Talk?</h5>
-      <a
-        href="/contact/"
-        class="btn btn-lg btn-rose rounded-0 font-weight-light px-5 py-3"
-        >Start a Project</a
-      >
-    </div>
+  <div class="container py-5">
+    <h5 class="font-weight-light">Ready to Talk?</h5>
+    <a
+      href="/contact/"
+      class="btn btn-lg btn-rose rounded-0 font-weight-light px-5 py-3"
+      >Start a Project</a
+    >
   </div>
-  
+</div>
 
 {{ end }}
