--- a/layouts/policy/single.html
+++ b/layouts/policy/single.html
@@ -2,7 +2,7 @@
 {{ partial "navbar" . }}
 
 <div class="container pt-2 px-5 pb-5">
-    <h1 class="font-weight-bold text-dark">{{.Title}}</h1>
+    <h1 class="font-weight-bold">{{.Title}}</h1>
     {{.Content}}
 </div>
 
