--- a/layouts/speaking-engagements/section.html
+++ b/layouts/speaking-engagements/section.html
@@ -6,17 +6,23 @@
 
 <div class="container py-5">
   <div class="row">
-    <div class="card text-yankees text-center col-lg-4 col-md-4 col-12 border-0">
+    <div
+      class="card text-yankees text-center col-lg-4 col-md-4 col-12 border-0"
+    >
       <p class="font-weight-bold">Resources</p>
       <i class="fas fa-2x fa-laptop-code text-rose pb-3"></i>
       <p class="font-weight-light">Free software & hardware.</p>
     </div>
-    <div class="card text-yankees text-center col-lg-4 col-md-4 col-12 border-0">
+    <div
+      class="card text-yankees text-center col-lg-4 col-md-4 col-12 border-0"
+    >
       <p class="font-weight-bold">Education</p>
       <i class="fas fa-2x fa-graduation-cap text-rose pb-3"></i>
       <p class="font-weight-light">We put students first.</p>
     </div>
-    <div class="card text-yankees text-center col-lg-4 col-md-4 col-12 border-0">
+    <div
+      class="card text-yankees text-center col-lg-4 col-md-4 col-12 border-0"
+    >
       <p class="font-weight-bold">Funding</p>
       <i class="fas fa-2x fa-search-dollar text-rose pb-3"></i>
       <p class="font-weight-light">Looking for money?</p>
@@ -26,7 +32,9 @@
 
 <div class="container-fluid bg-yankees py-3">
   <div class="container">
-    <h4 class="font-weight-light text-white text-center pt-4">Speaking Engagements</h4>
+    <h4 class="font-weight-light text-white text-center pt-4">
+      Speaking Engagements
+    </h4>
     <div class="row">
       {{ range $.Site.Data.speaking }}
       <a
@@ -45,6 +53,4 @@
   </div>
 </div>
 
-<div class="container"></div>
-
-{{ partial "contact" . }} {{end}}
+{{partial "partners" . }} {{ partial "contact" . }} {{end}}
